...

        var id: String { rawValue }

        var title: String {
            switch self {
            case .title: return "Title"
            case .heading: return "Heading"
            case .subheading: return "Subheading"
            case .body: return "Body"
            case .monospaced: return "Monospaced"
            }
        }

...
        case deleteRow, deleteColumn, deleteTable

        var id: Self { self }

        var title: String {
            switch self {
            case .addRowBelow: return "Add Row Below"
            case .addRowAbove: return "Add Row Above"
            case .addColumnAfter: return "Add Column After"
            case .addColumnBefore: return "Add Column Before"
            case .deleteRow: return "Delete Row"
            case .deleteColumn: return "Delete Column"
            case .deleteTable: return "Delete Table"
...
